--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,19 @@
 body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+button{
+  transition: scale 0.4s linear;
+}
+
+button:active{
+  scale:0.5;
+  
+}
+
+
+html,body{
+  overflow-x:hidden;
+  
+}
